--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,64 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {% include head.html %}
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ci-report</title>
+    <link rel="stylesheet" href="/assets/build/global-site.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+</head>
 
   <body>
-
-    {% include header.html %}
-
+    <header>
+    <nav class="navbar navbar-expand-md navbar-dark">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#"><i class="fa fa-pie-chart"></i> ci-report</a>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a id="a-dropdown" class="nav-item dropdown-toggle text-white" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-cog"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="a-dropdown">
+                <a id="a-dropdown-home" class="dropdown-item" href="#"><i class="fa fa-home"></i>&nbsp;&nbsp;Home</a>
+                <div class="dropdown-divider"></div>
+                <a id="a-dropdown-project" class="dropdown-item" href="#"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add a project</a>
+                <div class="dropdown-divider"></div>
+                <a id="a-dropdown-doc" class="dropdown-item" href="#" target="_blank"><i class="fa fa-book"></i>&nbsp;&nbsp;Documentation</a>
+                <a id="a-dropdown-api" class="dropdown-item" href="#" target="_blank"><i class="fa fa-file-code-o"></i>&nbsp;&nbsp;API Documentation</a>
+            </div>
+        </div>
+        </div>
+    </nav>
+    </header>
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
       </div>
     </main>
 
-    {% include footer.html %}
+    <div>
+    <div class="container">
+        {{ content }}
+    </div>
+    <footer>
+        <div class="container">
+            <div class="d-flex justify-content-center">
+                <p>
+                    <a href="https://www.ci-report.io">
+                        ci-report - &copy; 2018
+                    </a>
+                </p>
+            </div>
+        </div>
+    </footer>
     <script src="/assets/build/site.js"></script>
   </body>
 
